Enable service monitor

--- a/flux/apps/workload-1/release.yaml
+++ b/flux/apps/workload-1/release.yaml
@@ -17,6 +17,8 @@ spec:
       retries: 3
   values:
     replicaCount: 3
+    serviceMonitor:
+      enabled: true
     affinity:
       podAntiAffinity:
         preferredDuringSchedulingIgnoredDuringExecution:
