--- a/flux/apps/workload-istio/kustomization.yaml
+++ b/flux/apps/workload-istio/kustomization.yaml
@@ -3,4 +3,5 @@ kind: Kustomization
 namespace: workload-istio
 resources:
   - namespace.yaml
-  - release.yaml
+  #- release.yaml
+  #- gateway.yaml
