Split istio workload

--- a/flux/apps/workload-istio/kustomization.yaml
+++ b/flux/apps/workload-istio/kustomization.yaml
@@ -3,5 +3,6 @@ kind: Kustomization
 namespace: workload-istio
 resources:
   - namespace.yaml
-  #- release.yaml
-  #- gateway.yaml
+  - release-intel.yaml
+  - release-graviton2.yaml
+  - gateway.yaml
