--- a/cluster.yml.template
+++ b/cluster.yml.template
@@ -3,9 +3,19 @@ apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 
 metadata:
-  name: migrating-graviton21
+  name: migrating-graviton
   region: us-west-2
   version: '1.20'
+
+gitops:
+  flux:
+    gitProvider: github
+    flags:
+      owner: "$GITHUB_USERNAME"
+      repository: "migrating-x64-to-graviton2"
+      branch: "main"
+      namespace: "flux-system"
+      path: "flux/cluster"
 
 managedNodeGroups:
 - name: intel-a
@@ -54,13 +64,3 @@ addons:
   version: v1.20.4-eksbuild.2
 - name: coredns
   version: v1.8.3-eksbuild.1
-
-gitops:
-  flux:
-    gitProvider: github
-    flags:
-      owner: "niallthomson"
-      repository: "migrating-x64-to-graviton2"
-      branch: "main"
-      namespace: "flux-system"
-      path: "flux/cluster"
