--- a/graviton2-nodegroup.yml
+++ b/graviton2-nodegroup.yml
@@ -3,7 +3,7 @@ apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 
 metadata:
-  name: migrating-graviton21
+  name: migrating-graviton
   region: us-west-2
 
 managedNodeGroups:
