--- a/flux/apps/workload-istio/release-graviton2.yaml
+++ b/flux/apps/workload-istio/release-graviton2.yaml
@@ -16,8 +16,13 @@ spec:
     remediation:
       retries: 3
   values:
+    tolerations:
+    - key: "graviton2"
+      operator: "Equal"
+      value: "true"
+      effect: "NoSchedule"
     nodeSelector:
-      kubernetes.io/arch: amd64
+      kubernetes.io/arch: arm64
     replicaCount: 3
     affinity:
       podAntiAffinity:
