--- a/flux/apps/workload-istio/release-intel.yaml
+++ b/flux/apps/workload-istio/release-intel.yaml
@@ -16,13 +16,8 @@ spec:
     remediation:
       retries: 3
   values:
-    tolerations:
-    - key: "graviton2"
-      operator: "Equal"
-      value: "true"
-      effect: "NoSchedule"
     nodeSelector:
-      kubernetes.io/arch: arm64
+      kubernetes.io/arch: amd64
     replicaCount: 3
     affinity:
       podAntiAffinity:
