--- a/flux/apps/kustomization.yaml
+++ b/flux/apps/kustomization.yaml
@@ -2,8 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - sources
-  #- istio
+  - istio
   - prometheus
   - grafana
   - workload-1
-  #- workload-istio
+  - workload-istio
