--- a/flux/apps/kustomization.yaml
+++ b/flux/apps/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - sources
-  #- istio
+  - istio
   - prometheus
   - grafana
   - workload-1
