--- a/flux/apps/workload-istio/release-graviton2.yaml
+++ b/flux/apps/workload-istio/release-graviton2.yaml
@@ -24,7 +24,7 @@ spec:
     nodeSelector:
       kubernetes.io/arch: arm64
     ui:
-      message: "I'm on Graviton2"
+      message: "Running on Graviton2"
       color: "#fe9900" ##0065af
     replicaCount: 3
     affinity:
