--- a/flux/apps/workload-istio/release-graviton2.yaml
+++ b/flux/apps/workload-istio/release-graviton2.yaml
@@ -25,6 +25,7 @@ spec:
       kubernetes.io/arch: arm64
     ui:
       message: "Running on Graviton2"
+      icon: "https://github.com/cncf/artwork/raw/master/projects/kubernetes/icon/color/kubernetes-icon-color.png"
       color: "#fe9900" ##0065af
     replicaCount: 3
     affinity:
