--- a/flux/apps/workload-istio/release-graviton2.yaml
+++ b/flux/apps/workload-istio/release-graviton2.yaml
@@ -24,7 +24,7 @@ spec:
     nodeSelector:
       kubernetes.io/arch: arm64
     ui:
-      message: "Running on Graviton2"
+      message: "Powered by EC2 on Graviton2"
       logo: "https://github.com/cncf/artwork/raw/master/projects/kubernetes/icon/color/kubernetes-icon-color.png"
       color: "#fe9900" ##0065af
     replicaCount: 3
