--- a/flux/apps/workload-istio/release-intel.yaml
+++ b/flux/apps/workload-istio/release-intel.yaml
@@ -19,7 +19,7 @@ spec:
     nodeSelector:
       kubernetes.io/arch: amd64
     ui:
-      message: "Running on x64"
+      message: "Powered by EC2"
       logo: "https://github.com/cncf/artwork/raw/master/projects/kubernetes/icon/color/kubernetes-icon-color.png"
     replicaCount: 3
     affinity:
