--- a/flux/apps/workload-istio/release-intel.yaml
+++ b/flux/apps/workload-istio/release-intel.yaml
@@ -18,6 +18,8 @@ spec:
   values:
     nodeSelector:
       kubernetes.io/arch: amd64
+    fault:
+      delay: true
     ui:
       message: "Powered by EC2"
       logo: "https://github.com/cncf/artwork/raw/master/projects/kubernetes/icon/color/kubernetes-icon-color.png"
