Label istio pods with arch

--- a/flux/apps/workload-istio/release-graviton2.yaml
+++ b/flux/apps/workload-istio/release-graviton2.yaml
@@ -16,6 +16,9 @@ spec:
     remediation:
       retries: 3
   values:
+    metadata:
+      labels:
+        arch: arm64
     tolerations:
     - key: "graviton2"
       operator: "Equal"
