--- a/flux/apps/workload-istio/release-intel.yaml
+++ b/flux/apps/workload-istio/release-intel.yaml
@@ -16,6 +16,9 @@ spec:
     remediation:
       retries: 3
   values:
+    metadata:
+      labels:
+        arch: amd64
     nodeSelector:
       kubernetes.io/arch: amd64
     fault:
