--- a/flux/apps/workload-progressive/canary.yaml
+++ b/flux/apps/workload-progressive/canary.yaml
@@ -62,13 +62,13 @@ spec:
       - name: conformance-test
         type: pre-rollout
         timeout: 15s
-        url: http://flagger-loadtester.util/
+        url: http://flagger-loadtester.loadtest/
         metadata:
           type: bash
           cmd: "curl -sd 'test' http://frontend-canary.workload-progressive:9898/token | grep token"
       - name: load-test
         type: rollout
         timeout: 15s
-        url: http://flagger-loadtester.util/
+        url: http://flagger-loadtester.loadtest/
         metadata:
           cmd: "hey -z 1m -q 10 -c 2 -H 'Cookie: type=insider' http://frontend.workload-progressive:9898/"
