--- a/flux/apps/workload-progressive/canary.yaml
+++ b/flux/apps/workload-progressive/canary.yaml
@@ -68,7 +68,7 @@ spec:
           cmd: "curl -sd 'test' http://frontend-canary.workload-progressive:9898/token | grep token"
       - name: load-test
         type: rollout
-        timeout: 15s
+        timeout: 1m
         url: http://flagger-loadtester.loadtest/
         metadata:
-          cmd: "hey -z 1m -q 10 -c 2 -H 'Cookie: type=insider' http://frontend.workload-progressive:9898/"
+          cmd: "hey -z 2m -q 10 -c 2 -H 'Cookie: type=insider' http://frontend.workload-progressive:9898/"
