--- a/flux/apps/grafana/kustomization.yaml
+++ b/flux/apps/grafana/kustomization.yaml
@@ -3,6 +3,5 @@ kind: Kustomization
 namespace: grafana
 resources:
   - namespace.yaml
-  - test-dashboard.yaml
-  - flagger-canary-dashboard.yaml
+  - dashboards.yaml
   - release.yaml
