--- a/flux/apps/kustomization.yaml
+++ b/flux/apps/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
   - grafana
   - loadtest
   - workload-1
-  - workload-progressive
+  #- workload-progressive
   - workload-cart
   - workload-payment
   - workload-products
