--- a/flux/apps/workload-payment/canary.yaml
+++ b/flux/apps/workload-payment/canary.yaml
@@ -61,10 +61,10 @@ spec:
       url: http://flagger-loadtester.loadtest/
       metadata:
         type: bash
-        cmd: "curl -sd 'test' http://payment-canary.workload-progressive:9898/token | grep token"
+        cmd: "curl -sd 'test' http://payment-canary.workload-payment:9898/token | grep token"
     #- name: load-test
     #  type: rollout
     #  timeout: 1m
     #  url: http://flagger-loadtester.loadtest/
     #  metadata:
-    #    cmd: "hey -z 2m -q 10 -c 2 -H 'Cookie: type=insider' http://payment.workload-progressive:9898/"
+    #    cmd: "hey -z 2m -q 10 -c 2 -H 'Cookie: type=insider' http://payment.workload-payment:9898/"
