--- a/flux/apps/workload-cart/canary.yaml
+++ b/flux/apps/workload-cart/canary.yaml
@@ -67,4 +67,4 @@ spec:
       timeout: 1m
       url: http://flagger-loadtester.loadtest/
       metadata:
-        cmd: "hey -z 2m -q 10 -c 2 -H 'cart.example.com' http://cart.workload-cart:9898/"
+        cmd: "hey -z 2m -q 10 -c 2 -H 'Host: cart.example.com' http://cart.workload-cart:9898/"
