--- a/flux/apps/kustomization.yaml
+++ b/flux/apps/kustomization.yaml
@@ -5,6 +5,6 @@ resources:
   - prometheus
   - grafana
   - loadtest
-  #- workload-cart
-  #- workload-payment
-  #- workload-products
+  - workload-cart
+  - workload-payment
+  - workload-products
