--- a/flux/apps/workload-payment/deployment.yaml
+++ b/flux/apps/workload-payment/deployment.yaml
@@ -38,7 +38,7 @@ spec:
         - name: PODINFO_UI_COLOR
           value: "#34577c"
         - name: PODINFO_UI_MESSAGE
-          value: "I'm the payment service!"
+          value: "I'm the payment service"
         livenessProbe:
           exec:
             command:
