--- a/flux/cluster/apps.yaml
+++ b/flux/cluster/apps.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   dependsOn:
     - name: istio-gateway
-  interval: 1m0s
+  interval: 30s
   sourceRef:
     kind: GitRepository
     name: flux-system
