--- a/flux/apps/workload-payment/deployment.yaml
+++ b/flux/apps/workload-payment/deployment.yaml
@@ -64,10 +64,10 @@ spec:
           requests:
             cpu: 100m
             memory: 64Mi
-      tolerations:
-      - key: "graviton2"
-        operator: "Equal"
-        value: "true"
-        effect: "NoSchedule"
-      nodeSelector:
-        kubernetes.io/arch: arm64
+      #tolerations:
+      #- key: "graviton2"
+      #  operator: "Equal"
+      #  value: "true"
+      #  effect: "NoSchedule"
+      #nodeSelector:
+      #  kubernetes.io/arch: arm64
